# stacks

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .stylelintrc.js  Dockerfile  Dockerfile-django  Dockerfile-tailscale  LICENSE.md  README.md  RemixIcon_Collection_2406051607.remixicon  compose.yml  crontab  daily-backup.sh  django-proxy.json  example-local.env  example-production.env  fly.toml  justfile  litestream.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js
caddy/: Caddyfile
config/: settings.py  urls.py  wsgi.py
config/tests/: test_models.py  test_views.py
core/: admin.py  context_processors.py  cover_helpers.py  fields.py  filter_helpers.py  forms.py  image_helpers.py  import_helpers.py  middleware.py  models.py  resources.py  tasks.py  utils.py  views.py
core/fixtures/: authors.json  book_format.json  book_genre.json  book_location.json  book_type.json  books.json  userbooks.json  users.json
core/migrations/: 0001_initial.py  0012_booknote.py  (+75 more)
e2e/: auth.setup.js  login-page.spec.js  settings-page.spec.js
fly/: backup.sh  spaces-lifecycle.json  start.sh
nginx/: nginx.conf
requirements/: requirements.in  requirements.txt
static_nonversioned/: site.webmanifest
templates/: author_detail.html  author_form.html  base.html  book_detail.html  book_form.html  changelog.html  changelog_latest.txt  cover_form.html  generate_random_users.html  home.html  import_books.html  imports.html  logbook.html  note_form.html  offline.html  ol_search.html  reading_form.html  search.html  series_add_book.html  series_detail.html  series_form.html  series_list.html  settings.html  status.html
(+85 files in other folders)
