[project]
name = "stacks"
version = "1.0.0"
description = "TBR tracking for tightly wound people"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=24.10.0",
    "boto3>=1.35.49",
    "coverage>=7.6.4",
    "dj-database-url>=2.3.0",
    "django-admin-dracula>=0.0.2",
    "django-bleach>=3.1.0",
    "django-browser-reload>=1.16.0",
    "django-debug-toolbar>=4.4.6",
    "django-extensions>=3.2.3",
    "django-honeypot>=1.2.1",
    "django-htmx>=1.20.0",
    "django-ordered-model>=3.7.4",
    "django-registration>=3.4",
    "django-storages>=1.14.4",
    "django>=5.1.2",
    "djlint>=1.35.2",
    "environs[django]>=11.0.0",
    "faker>=30.8.1",
    "flake8>=7.1.1",
    "gunicorn>=23.0.0",
    "httpx>=0.27.2",
    "huey>=2.5.2",
    "ipython>=8.29.0",
    "just-sh>=0.0.2",
    "markdown>=3.7",
    "model-bakery>=1.20.0",
    "pillow-avif-plugin>=1.4.6",
    "pillow>=11.0.0",
    "pre-commit>=4.0.1",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.9.0",
    "pytest-xdist>=3.6.1",
    "pytz>=2024.2",
    "requests>=2.32.3",
    "sentry-sdk>=2.17.0",
    "titlecase>=2.4.1",
    "whitenoise>=6.7.0",
]

[tool.black]
target-version = ['py312']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.djlint]
# H017: Void tags should be self closing.
# H031:	Consider adding meta keywords.
ignore = "H017,H031"
preserve_blank_lines = true
indent = 2

[tool.pyright]
# For Zed's Pyright
venvPath = "."
venv = ".venv"
reportGeneralTypeIssues = false
